# astrbot_plugin_pjsk

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
.superpowers/sdd/: task-1-report.md
adapters/: __init__.py
adapters/cache/: memory_candidate_store.py
adapters/config/: vision.py
adapters/database/: connection.py  migrator.py  ocr_run_repository.py  (+2 more)
assets/: help_menu.html
chart_data/: manifest.json  pentatonic_append.json  pentatonic_expert.json  pentatonic_master.json
docs/: README.md
gateway/: bot.py  commands.py  health.py  log_config.py
ops/: _scp-test-gw.sh  backup-db.sh  deploy-onebot.sh  deploy-render-service.sh  deploy-test-gateway.sh  pjsk-onebot.service  pjsk-render.service  pjsk-renderer.service  run-render-dev.ps1  start-gateway.sh  start-test-gw.sh  vps-deploy.sh
pjsk_core/: __init__.py
pjsk_emubot/: _handlers.py  bootstrap.py  candidate_presenter.py  main.py  reply_builder.py  result_dto.py  runtime.py
pjsk_runtime/: __init__.py  bootstrap.py  connection.py  runtime.py
plugin/: __init__.py  bootstrap.py  ephemeral.py  event_mapper.py  main.py  rate_limiter.py  reply_builder.py  runtime.py
render_service/: main.py  requirements.txt
tests/: test_package_boundaries.py  test_port_contracts.py  test_reply_types.py
tools/: audit_chart_levels.py  audit_legacy_db.py  benchmark_vision_engines.py  fix_chart_levels.py  fix_placeholder_constants.py  import_chart_data.py  migrate_jacket_cache.py  migrate_legacy_scores.py  render_preview.py
(+176 files in other folders)
