[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pjsk-astrbot"
version = "0.0.0"
description = "Platform-independent core for the PJSK AstrBot plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["pjsk_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
