[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pjsk-astrbot"
version = "0.0.0"
description = "Platform-independent core for the PJSK AstrBot plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiosqlite>=0.20", "httpx>=0.27"]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["pjsk_core", "pjsk_core.*", "adapters", "adapters.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "astrbot.*"
ignore_missing_imports = true
